<resources>
    <string name="app_name">AndroidCalculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="initiate_number">0</string>
    <string name="symbol_clear">C</string>
    <!--first line-->
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="symbol_divide">/</string>
    <!--second line-->
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="symbol_multiply">*</string>
    <!--third line-->
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="symbol_substract">-</string>
    <!--fourth line-->
    <string name="number_zero">0</string>
    <string name="symbol_dot">.</string>
    <string name="symbol_equal">=</string>
    <string name="symbol_add">+</string>
</resources>
